# paperbot-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
.github/workflows/: cd.yml  ci.yml  db-backup.yml
deploy/: SERVER_SETUP.md  paperscout.conf
src/paperbot/: __init__.py  __main__.py  bot.py  config.py  db.py  monitor.py  sources.py  storage.py
src/paperscout/: __init__.py  __main__.py  config.py  health.py  models.py  monitor.py  scout.py  sources.py  storage.py
tests/: conftest.py  test_bot.py  test_health.py  test_models.py  test_monitor.py  test_scout.py  test_sources.py  test_storage.py
