[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbot"
version = "0.1.0"
description = "WG21 C++ paper tracker with ISO draft probing and Slack notifications"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt",
    "httpx[http2]",
    "pydantic-settings",
    "apscheduler>=4.0.0a,<5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperbot"]
