[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbot"
version = "0.1.0"
description = "WG21 C++ paper tracker with ISO draft probing and Slack notifications"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt",
    "httpx[http2]",
    "pydantic-settings",
    "apscheduler>=4.0.0a,<5",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["paperbot"]
omit = ["*/paperbot/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
